--- a/www/templates/ContactUs.html
+++ b/www/templates/ContactUs.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
-    contact
+  <ion-content class="has-header" id="feedback">
+    Contact US
   </ion-content>
 </ion-view>
