--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -10,11 +10,11 @@
 	<ion-nav-buttons side="left">
 		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
-	<ion-content class="padding has-header landing_bg">
+	<ion-content class="has-header" id="dashboard">
 
-		<div style="text-align: center;">
-			<p>Save the app that could save your love one.</p>
-			<img src="./img/heart-rate.png" height="95px">
+		<div style="text-align: center; margin-top: 20%">
+			<!--<p>Save the app that could save your love one.</p>
+			<img src="./img/heart-rate.png" height="95px">-->
 			<div>
 				<div class="row">
 					<div class="col"> 
